@@ -1,1 +1,1 @@
-1.4.39.1
+1.4.39.2
